# Southshorett

./: .gitignore  README.md  pyproject.toml
src/htpy_hv/: __init__.py
src/main/: settings.py  urls.py
src/southshorett/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
src/southshorett/components/: app.py  web.py
src/southshorett/fixtures/: demo.json
src/southshorett/migrations/: 0001_initial.py  0002_season_rating_match.py
